--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="UqVWGCLnVxPCgQo4nBF9PsouhhOIkO-iOR728ar9pws" />
     <title>✏️DinColor | Coloriage Escape</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -285,6 +286,7 @@ Take a moment to explore my works and find the perfect book to spark your imagin
 
 </body>
 </html>
+
 
 
 
