--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="UqVWGCLnVxPCgQo4nBF9PsouhhOIkO-iOR728ar9pws" />
-    <title>✏️DinColor | Coloriage Escape</title>
+    <title>DinColor – Coloring Books</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 </head>
 
-
+<body>
 <div class="sliderOne" >
   <div class="overlay">
  
@@ -36,7 +36,7 @@
     <div class="pricing-header p-3 py-5 pb-md-4 mx-auto text-center">
      
       <img class="dincolor" src="DINCOLOR40.png">
-      <p class="text-white titleWeb animationTwo">Coloring Escape</p>
+      <h1 class="text-white titleWeb animationTwo">Coloring Escape</h1>
       <br>
       <a class="btnContactezmoi" href="mailto:jade330673@gmail.com" target="_blank" 
       data-id="3">Contact me<i class="fa "></i></a>
@@ -286,6 +286,7 @@ Take a moment to explore my works and find the perfect book to spark your imagin
 
 </body>
 </html>
+
 
 
 
